last changes and added notes

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 .error {
     background-color: rgb(195, 0, 49);
     color: white;
-    font-size: 48px;.
+    font-size: 48px;
 }
 
 .hide-error {
